log
Thu Mar 19 06:54:55 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
cd9d028
Thu Mar 19 07:13:44 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:27: error: expected expression before ‘List’
   55 |    void* elemento = first(List *L);
      |                           ^~~~
e5f5926
Thu Mar 19 07:14:55 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu Mar 19 07:24:06 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:27: error: invalid use of incomplete typedef ‘List’
   55 |    void* elemento = first(*L);
      |                           ^~
exercises.c:58:23: error: invalid use of incomplete typedef ‘List’
   58 |       elemento = next(*L);
      |                       ^~
4eeba76
Thu Mar 19 07:24:52 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:27: error: expected expression before ‘List’
   55 |    void* elemento = first(List *L);
      |                           ^~~~
exercises.c:58:23: error: expected expression before ‘List’
   58 |       elemento = next(List *L);
      |                       ^~~~
7303286
Thu Mar 19 07:25:12 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
df26b1c
Thu Mar 19 07:26:32 PM UTC 2026: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
45f6fd6
Thu Mar 19 07:35:12 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:24: error: invalid type argument of unary ‘*’ (have ‘int’)
   47 |       void* elemento = *i;
      |                        ^~
dd7e668
Thu Mar 19 07:45:59 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:19: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Wint-conversion]
   48 |       pushBack(L, *((int*)elemento));
      |                   ^~~~~~~~~~~~~~~~~
      |                   |
      |                   int
In file included from exercises.c:6:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
f84d1e0
Thu Mar 19 07:46:51 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
812422c
Thu Mar 19 07:55:37 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c13ff60
